# android-app

./: .editorconfig  .gitattributes  .gitignore  Dockerfile  README.md  build.gradle  build.gradle.kts  gradle.properties  local.defaults.properties  release.sh  settings.gradle  settings.gradle.kts  verify-mixin-apk.sh
.codex/environments/: environment.toml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: android.yml  codeql-analysis.yml  detekt.yml
app/: .gitignore  build.gradle  build.gradle.kts  proguard-rules.pro  proguard.pro
app/keys/: debug.keystore
app/libs/: mixin.aar  tip.aar
app/schemas/googlePlay/one.mixin.android.db.MixinDatabase/: 20.json  22.json  24.json  27.json  28.json  34.json  36.json  39.json  41.json  46.json  48.json  58.json  60.json  61.json  66.json  68.json  71.json
app/schemas/googlePlay/one.mixin.android.db.PerpsDatabase/: 1.json  2.json  3.json  4.json  5.json
app/schemas/googlePlay/one.mixin.android.fts.FtsDatabase/: 1.json
app/schemas/one.mixin.android.crypto.db.SignalDatabase/: 2.json
app/schemas/one.mixin.android.db.MixinDatabase/: 13.json  14.json  15.json  16.json  17.json  19.json  20.json  21.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  40.json  41.json  42.json  43.json  44.json  45.json  46.json  47.json  48.json  49.json  50.json  51.json  52.json  53.json  54.json  (+13 more)
app/schemas/one.mixin.android.db.PerpsDatabase/: 1.json  2.json  3.json  4.json
app/schemas/one.mixin.android.db.WalletDatabase/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json
app/schemas/one.mixin.android.db.cache.CacheDataBase/: 1.json
app/schemas/one.mixin.android.db.pending.PendingDataBaseImp/: 1.json  2.json
app/schemas/one.mixin.android.db.web3.Web3Database/: 1.json
app/schemas/one.mixin.android.fts.FtsDatabase/: 1.json
app/schemas/otherChannel/one.mixin.android.crypto.db.SignalDatabase/: 3.json
app/schemas/otherChannel/one.mixin.android.db.MixinDatabase/: 12.json  18.json  21.json  28.json  37.json  56.json  59.json  63.json  64.json
app/schemas/otherChannel/one.mixin.android.db.PerpsDatabase/: 6.json
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: captcha.html  gt4.js  pdf.html  recaptcha.html  risk.html
app/src/main/cpp/: CMakeLists.txt  audio.c  blst_wrap.cpp  lottie.cpp  utils.h
app/src/main/cpp/rlottie/inc/: rlottie.h
app/src/main/cpp/rlottie/src/lottie/: lottieparser.cpp
app/src/main/cpp/rlottie/src/vector/: vraster.cpp
app/src/main/proto/: safe_box.proto
app/src/main/res/anim/: dock_bottom_enter.xml  dock_bottom_exit.xml  fade_in.xml  fade_out.xml  no_transition.xml  scale_out.xml  slide_in_bottom.xml  slide_in_bottom_fast.xml  slide_in_bottom_slow.xml  slide_in_left.xml  slide_in_top.xml  slide_out_bottom.xml  slide_out_bottom_fast.xml  slide_out_top.xml  slide_out_top_slow.xml  stay.xml
app/src/main/res/animator/: selector_animator.xml
app/src/main/res/color/: bg_button.xml  bg_button_gray.xml  bg_button_orange.xml  bg_button_window.xml  color_music_prev_next.xml  selector_blue_tv.xml  selector_bn.xml  selector_cancel.xml  selector_dialog_tv.xml  selector_sort_tv.xml  selector_text_white.xml  selector_tv.xml  selector_tv_blue.xml  selector_tv_white.xml  text_button.xml
app/src/main/res/drawable/: ba_label.xml  bg_action.xml  bg_action_button.xml  bg_add_member_et.xml  bg_audio_preview.xml  bg_badge_text.xml  bg_bot_manager.xml  bg_bubble_shadow.xml  bg_call_add.xml  bg_call_answer.xml  bg_call_btn_checked.xml  bg_call_btn_unchecked.xml  bg_call_green.xml  bg_call_hangup.xml  bg_call_mute.xml  bg_card.xml  bg_card_bottom.xml  bg_card_gradient.xml  bg_card_middle.xml  bg_card_top.xml  bg_cash_account_preview_bottom_sheet.xml  bg_cash_account_preview_cancel_button.xml  bg_cash_account_preview_card.xml  bg_chain_gradient.xml  bg_chat_unread.xml  bg_circle.xml  bg_circle_70_solid_gray.xml  bg_circle_alpha22.xml  bg_circle_black_40.xml  bg_circle_blue.xml  bg_circle_border.xml  bg_circle_border_1dp.xml  bg_circle_contact.xml  bg_circle_reply.xml  bg_circle_text.xml  bg_circle_white.xml  bg_circle_white_45.xml  bg_circle_white_80.xml  bg_code.xml  bg_code_block.xml  (+1053 more)
app/src/main/res/drawable-night/: bg_market_watchlist_widget_card.xml
app/src/main/res/drawable-v24/: ic_desktop.xml
app/src/main/res/layout/: activity_add_wallet.xml  activity_app_auth.xml  activity_avatar.xml  activity_call.xml  activity_camera.xml  activity_chat.xml  activity_chat_history.xml  activity_check_pin.xml  activity_contact.xml  activity_conversation_placeholder.xml  activity_deposit_share.xml  activity_device.xml  activity_drag_media.xml  activity_gallery.xml  activity_inscription.xml  activity_landing.xml  activity_location.xml  activity_web.xml  (+693 more)
app/src/main/res/layout-v26/: fragment_input.xml  fragment_setup_name.xml
app/src/main/res/layout-zh-rCN/: dialog_delete.xml
app/src/staging/: AndroidManifest.xml
app/src/supranational/blst/: BLST_ERROR.java  P1.java  P1_Affine.java  P2.java  P2_Affine.java  PT.java  Pairing.java  Scalar.java  SecretKey.java  blst.java  blstJNI.java
app/src/test/: AndroidManifest.xml
app/src/test/resources/: robolectric.properties
app/src/testGooglePlayDebug/: AndroidManifest.xml
app/tip-go/: bls.go  bls_test.go  build-aar.sh  build-ios.sh  go.mod  go.sum  key.go  point.go  scalar.go
app/tip-go/abi/: decoder.go  decoder_test.go
app/tip-go/crypto/: aes.go  jwt.go  jwt_test.go  key.go  point.go  suite.go
app/tip-go/ed25519/: key.go
app/tip-go/jwt/: jwt.go  jwt_test.go
app/tip-go/kernel/: address.go  tx.go  tx_test.go
app/tip-go/tip/: aes.go  aes_test.go  base58.go  bls.go  bls_test.go  point.go  scalar.go  suite.go
benchmark/: build.gradle
benchmark/src/main/: AndroidManifest.xml
fastlane/: Appfile
flow/: message_flow.dio
flow/tip/: tip.dio
gradle/: verification-metadata.xml
gradle/wrapper/: gradle-wrapper.properties
query-codegen/: build.gradle.kts
room-runtime/: build.gradle
(+3790 files in other folders)
